update serve and cluster config

--- a/ray-cluster.yaml
+++ b/ray-cluster.yaml
@@ -13,7 +13,6 @@ spec:
         securityContext:
           fsGroup: 0      # write-permission for mounted volumes
 
-
         # Mount configuration
         volumes:
         - name: workspace
@@ -28,7 +27,7 @@ spec:
           persistentVolumeClaim:
             claimName: ray-checkpoints-pvc
 
-        # initialization
+        # Initialization
         initContainers:
         - name: sync-code
           image: alpine/git:latest
@@ -37,6 +36,9 @@ spec:
             value: https://github.com/wonkyoc/ray-tutorial
           - name: GIT_SYNC_BRANCH
             value: main
+          volumeMounts:
+          - mountPath: /code
+            name: workspace
           command: ["/bin/sh", "-c"]
           args:
           - |
@@ -47,7 +49,7 @@ spec:
         # Head container specifications  
         containers:
         - name: ray-head
-          image: rayproject/ray:2.52.0-py312-gpu
+          image: rayproject/ray-llm:2.52.0-py311-cu128
           env:
           - name: RAY_RUNTIME_ENV_HOOK
             value: ray._private.runtime_env.uv_runtime_env_hook.hook
@@ -63,12 +65,16 @@ spec:
             name: dashboard
           - containerPort: 10001
             name: client
+          - containerPort: 8000 # Ray Serve
+            name: serve
+          - containerPort: 8080 # Metrics
+            name: metrics
           resources:
             limits:
-              cpu: "1"
+              cpu: "4"
               memory: "5Gi"
             requests:
-              cpu: "1"
+              cpu: "4"
               memory: "2Gi"
           volumeMounts:
           - mountPath: /home/ray/training
@@ -92,7 +98,7 @@ spec:
           fsGroup: 0
         containers:
         - name: ray-worker
-          image: rayproject/ray:2.52.0-py312-gpu
+          image: rayproject/ray-llm:2.52.0-py311-cu128
           env:
           - name: HUGGING_FACE_HUB_TOKEN
             valueFrom: 
