--- a/ray-cluster.yaml
+++ b/ray-cluster.yaml
@@ -49,7 +49,8 @@ spec:
         # Head container specifications  
         containers:
         - name: ray-head
-          image: rayproject/ray-llm:2.52.0-py311-cu128
+          #image: rayproject/ray-llm:2.52.0-py311-cu128
+          image: rayproject/ray:2.52.0-py312-cu128
           env:
           - name: RAY_RUNTIME_ENV_HOOK
             value: ray._private.runtime_env.uv_runtime_env_hook.hook
@@ -98,7 +99,8 @@ spec:
           fsGroup: 0
         containers:
         - name: ray-worker
-          image: rayproject/ray-llm:2.52.0-py311-cu128
+          image: rayproject/ray:2.52.0-py312-cu128
+          #image: rayproject/ray-llm:2.52.0-py311-cu128
           env:
           - name: HUGGING_FACE_HUB_TOKEN
             valueFrom: 
